# rss-reader

./: CONVERSATION_SUMMARY.md  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs
src/ai/: summarizer.rs
src/db/: repository.rs  schema.rs
src/feed/: fetcher.rs
src/models/: summary.rs
src/services/: content_fetcher.rs  raindrop.rs
src/tui/: handler.rs  ui.rs
